WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86366
[EFL] EFL's DRT needs to call Settings::setValidationMessageTimerMagnification(-1)
https://bugs.webkit.org/show_bug.cgi?id=86366
Summary
[EFL] EFL's DRT needs to call Settings::setValidationMessageTimerMagnificatio...
Chris Dumez
Reported
2012-05-14 06:09:38 PDT
EFL's DRT needs to call Settings::setValidationMessageTimerMagnification(-1) in order to unskip the following test case: fast/forms/validation-message-appearance.html
Attachments
Patch
(29.36 KB, patch)
2012-05-14 06:18 PDT
,
Chris Dumez
tonikitoo
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(29.33 KB, patch)
2012-05-22 22:44 PDT
,
Chris Dumez
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(29.33 KB, patch)
2012-05-22 23:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-05-14 06:18:03 PDT
Created
attachment 141711
[details]
Patch
Gyuyoung Kim
Comment 2
2012-05-14 06:57:58 PDT
Comment on
attachment 141711
[details]
Patch LGTM.
Raphael Kubo da Costa (:rakuco)
Comment 3
2012-05-15 13:24:37 PDT
Comment on
attachment 141711
[details]
Patch Looks fine, thank you.
WebKit Review Bot
Comment 4
2012-05-22 12:24:14 PDT
Comment on
attachment 141711
[details]
Patch Rejecting
attachment 141711
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: (offset 44 lines). patching file Source/WebKit/efl/WebCoreSupport/DumpRenderTreeSupportEfl.h Hunk #1 succeeded at 99 with fuzz 1 (offset 2 lines). patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp Hunk #1 succeeded at 251 with fuzz 2 (offset -6 lines). Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Antonio Go..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output:
http://queues.webkit.org/results/12749396
Gyuyoung Kim
Comment 5
2012-05-22 20:15:19 PDT
Comment on
attachment 141711
[details]
Patch Please rebase for this patch, then request cq?
Chris Dumez
Comment 6
2012-05-22 22:44:38 PDT
Created
attachment 143465
[details]
Patch for landing Could someone please cq+ ?
WebKit Review Bot
Comment 7
2012-05-22 22:54:10 PDT
Comment on
attachment 143465
[details]
Patch for landing Rejecting
attachment 143465
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/efl/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12776084
Gyuyoung Kim
Comment 8
2012-05-22 22:57:07 PDT
Comment on
attachment 143465
[details]
Patch for landing View in context:
https://bugs.webkit.org/attachment.cgi?id=143465&action=review
> Source/WebKit/efl/ChangeLog:6 > + Reviewed by NOBODY (OOPS!).
You should modify this line as well.
Chris Dumez
Comment 9
2012-05-22 23:06:34 PDT
Created
attachment 143468
[details]
Patch for landing Sorry I missed that one.
WebKit Review Bot
Comment 10
2012-05-23 00:37:06 PDT
Comment on
attachment 143468
[details]
Patch for landing Clearing flags on attachment: 143468 Committed
r118140
: <
http://trac.webkit.org/changeset/118140
>
WebKit Review Bot
Comment 11
2012-05-23 00:37:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug