[EFL] EFL's DRT needs to call Settings::setValidationMessageTimerMagnification(-1) https://bugs.webkit.org/show_bug.cgi?id=86366

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-23
Reviewed by Antonio Gomes.

Source/WebKit/efl:

Add helper function to DumpRenderTreeSupportEfl to set the validation
message timer magnification.

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::setValidationMessageTimerMagnification):
* WebCoreSupport/DumpRenderTreeSupportEfl.h:

Tools:

Call Settings::setValidationMessageTimerMagnification(-1) between the tests.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::resetDefaultsToConsistentValues):

LayoutTests:

Unskip fast/forms/validation-message-appearance.html and add EFL
expectation.

* platform/efl/Skipped:
* platform/efl/fast/forms/validation-message-appearance-expected.png: Added.
* platform/efl/fast/forms/validation-message-appearance-expected.txt: Added.

Canonical link: https://commits.webkit.org/104953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118140 268f45cc-cd09-0410-ab3c-d52691b4dbfc